--- a/i3_files/i3/config
+++ b/i3_files/i3/config
@@ -223,5 +223,6 @@ bar {
 
 # cyclic backdrops
 exec_always ~/dotfiles/i3_files/update-wallpaper.sh
+# dropbox sync
 exec --no-startup-id dropbox start -i
 
