--- a/i3_files/i3/config
+++ b/i3_files/i3/config
@@ -224,6 +224,8 @@ bar {
 # dropbox sync
 exec --no-startup-id dropbox start -i
 exec --no-startup-id google-drive-ocamlfuse ~/GoogleDrive
+exec --no-startup-id fcitx
+#
 # cyclic backdrops
 exec_always ~/dotfiles/i3_files/update-wallpaper.sh
 
