--- a/i3_files/i3/config
+++ b/i3_files/i3/config
@@ -224,7 +224,7 @@ bar {
 # dropbox sync
 exec --no-startup-id dropbox start -i
 exec --no-startup-id google-drive-ocamlfuse ~/GoogleDrive
-exec --no-startup-id fcitx
+exec --no-startup-id ibus-daemon -r -d -x
 #
 # cyclic backdrops
 exec_always ~/dotfiles/i3_files/update-wallpaper.sh
