--- a/i3_files/i3/config
+++ b/i3_files/i3/config
@@ -191,6 +191,7 @@ mode $shortcut{
 		bindsym t exec thunderbird; mode "default"
 		bindsym g exec google-chrome; mode "default"
 		bindsym f exec firefox; mode "default"
+		bindsym c exec unity-control-center; mode "default"
 		bindsym z exec nautilus --no-desktop; mode "default"
 		bindsym e exec evince; mode "default"
 
