--- a/i3_files/i3/config
+++ b/i3_files/i3/config
@@ -229,4 +229,5 @@ exec --no-startup-id google-drive-ocamlfuse ~/GoogleDrive
 exec --no-startup-id ibus-daemon -r -d -x
 #
 # cyclic backdrops
-exec_always ~/dotfiles/i3_files/update-wallpaper.sh
+# exec_always ~/dotfiles/i3_files/update-wallpaper.sh
+
