--- a/i3_files/i3/config
+++ b/i3_files/i3/config
@@ -231,3 +231,6 @@ exec --no-startup-id ibus-daemon -r -d -x
 # cyclic backdrops
 # exec_always ~/dotfiles/i3_files/update-wallpaper.sh
 
+exec xset s off
+exec xset -dpms
+
