--- a/i3_files/i3/config
+++ b/i3_files/i3/config
@@ -90,10 +90,10 @@ bindsym $mod+a focus parent
 #bindsym $mod+d focus child 
 # switch to workspace
 bindsym $mod+1 workspace 1
-bindsym $mod+2 workspace 2
+bindsym $mod+2 workspace 2:web
 bindsym $mod+3 workspace 3
 bindsym $mod+4 workspace 4
-bindsym $mod+5 workspace 5
+bindsym $mod+5 workspace 5:mat
 bindsym $mod+6 workspace 6
 bindsym $mod+7 workspace 7
 bindsym $mod+8 workspace 8
@@ -102,10 +102,10 @@ bindsym $mod+0 workspace 10
 
 # move focused container to workspace
 bindsym $mod+Shift+1 move container to workspace 1
-bindsym $mod+Shift+2 move container to workspace 2
+bindsym $mod+Shift+2 move container to workspace 2:web
 bindsym $mod+Shift+3 move container to workspace 3
 bindsym $mod+Shift+4 move container to workspace 4
-bindsym $mod+Shift+5 move container to workspace 5
+bindsym $mod+Shift+5 move container to workspace 5:mat
 bindsym $mod+Shift+6 move container to workspace 6
 bindsym $mod+Shift+7 move container to workspace 7
 bindsym $mod+Shift+8 move container to workspace 8
@@ -185,6 +185,12 @@ mode "resize" {
 
 bindsym $mod+r mode "resize"
 
+# assign
+assign [class="thunderbird"] 2:web
+assign [class="google-chrome"] 2:web
+assign [class="Firefox"] 2:web
+assign [class="MATLAB.*"] 5:mat
+
 # shortcut 
 set $shortcut "press shortcut key"
 mode $shortcut{
@@ -193,8 +199,9 @@ mode $shortcut{
 		bindsym f exec firefox; mode "default"
 		bindsym c exec unity-control-center; mode "default"
 		bindsym z exec nautilus --no-desktop; mode "default"
-		bindsym e exec evince; mode "default"
 		bindsym m exec matlab; mode "default"
+
+		bindsym e exec evince; mode "default"
 
         # back to normal
         bindsym q mode "default"
