--- a/i3_files/i3/config
+++ b/i3_files/i3/config
@@ -238,7 +238,8 @@ exec xset -dpms
 # auto start
 exec --no-startup-id dropbox start -i
 exec --no-startup-id google-drive-ocamlfuse ~/GoogleDrive
-exec --no-startup-id ibus-daemon -r -d -x
+#exec --no-startup-id ibus-daemon -r -d -x
+exec --no-startup-id fcitx
 # # cyclic backdrops
 # exec_always ~/dotfiles/i3_files/update-wallpaper.sh
 
